--- a/Abschlussarbeit.css
+++ b/Abschlussarbeit.css
@@ -1,6 +1,7 @@
 body{
     background-color: lightgray;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1, h2, h3, p{
@@ -30,19 +31,19 @@ h1, h2, h3, p{
 }
 
 #star svg{
-    fill: yellow;
+    fill: #FAC83C;
 }
 
 #triangle svg{
-    fill: orange;
+    fill: #FAA050;
 }
 
 #rectangle svg{
-    fill: green;
+    fill: #D7E6AA;
 }
 
 #circle svg{
-    fill: red;
+    fill: #dc504b;
     
 }
 
@@ -87,17 +88,17 @@ path:hover, circle:hover{
 
 #canvasSmall{
     width: 25%;
-    background-color: black;
+    background-color: #282828;
 }
 
 #canvasMedium{
     width: 35%;
-    background-color: red;
+    background-color: #F6E2A2;
 }
 
 #canvasBig{
     width: 40%;
-    background-color: green;
+    background-color:#AEC8E5;
 }
 
 #canvasSmall, #canvasMedium, #canvasBig{
